# nature_remo_rust

./: .gitignore  Cargo.toml  README.md  Taskfile.yml  pyproject.toml  test.json
python/nature_remo_api/: __init__.py  __init__.pyi  __version__.py  api.py
python/nature_remo_api/domain/: __init__.pyi
python/nature_remo_api/http/: __init__.pyi
python/nature_remo_api/interfaces/: errors.py
python/nature_remo_api/interfaces/raw_api/: __init__.py  default.py
python/nature_remo_api/request_generator/: __init__.pyi
python/tests/: test_main.py
rust/nature_remo_api/: Cargo.toml
rust/nature_remo_api/src/: domain.rs  lib.rs  python_extern.rs
rust/nature_remo_api/src/domain/: air_con.rs  errors.rs  home.rs  ir_signal.rs  mod.rs
rust/nature_remo_api/src/domain/inner/: air_con_smart_eco_mode.rs  country.rs  image_id.rs  macros.rs  mixed_types.rs  mod.rs  privacy_policy.rs  sensor_value.rs  signal_id.rs  temperature_unit.rs
rust/nature_remo_api/src/domain/inner/aircon/: air_con_range.rs  air_con_range_extra.rs  air_con_range_mode.rs  air_con_setting_extra.rs  mod.rs
rust/nature_remo_api/src/domain/inner/appliance/: appliance_id.rs  appliance_model.rs  appliance_type.rs  mod.rs
rust/nature_remo_api/src/domain/inner/device/: device_id.rs  mod.rs
rust/nature_remo_api/src/domain/params/: air_con_params.rs  appliance_params.rs  create_appliance_request.rs  create_signal_parameters.rs  detect_appliance_request.rs  humidity_offset_params.rs  mod.rs  post_device_params.rs  reorder_appliances_params.rs  reorder_signal_params.rs  temperature_offset_params.rs  update_profile_param.rs
rust/nature_remo_api/src/domain/response/: aircon_settings_response.rs  appliance_model_and_params.rs  appliance_response.rs  device_response.rs  macros.rs  mod.rs  signal.rs  user_response.rs
rust/nature_remo_api/src/http/: http_method_wrapper.rs  http_status_code_wrapper.rs  http_uri_wrapper.rs  mod.rs  rate_limit.rs
rust/nature_remo_api/src/python_extern/: client.rs  mod.rs
rust/nature_remo_api/src/python_extern/service_provider/: device_service.rs  mod.rs  user_service.rs
rust/nature_remo_api/src/service_provider/: mod.rs
rust/nature_remo_api/src/service_provider/request_generator/: appliance_service.rs  device_service.rs  mod.rs  user_service.rs
rust/nature_remo_api_client/: Cargo.toml
rust/nature_remo_api_client/src/: appliance_service.rs  device_service.rs  errors.rs  lib.rs  user_service.rs  utils.rs
rust/nature_remo_api_machine/: Cargo.toml
rust/nature_remo_api_machine/src/: lib.rs
rust/nature_remo_api_raw/: Cargo.toml
sample_data/: get_appliances.json  get_device_appliances.json
src/: lib.rs
src/nature_remo_api/: __init__.py
