[project]
name = "nature_remo_api"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]
readme = "README.md"
dependencies = [
    "aiohttp>=3.10.11",
]

[build-system]
requires = ["maturin>=1.8,<2.0"]
build-backend = "maturin"

[dependency-groups]
dev = [
    "maturin>=1.8.2",
    "maturin-import-hook>=0.1.0",
    "nature_remo_api>=0.1.0",
    "pip>=25.0.1",
    "pytest>=8.3.4",
]

[tool.maturin]
module-name = "nature_remo_api._rust_api"
python-source = "python"
profile = "dev"
features = ["pyo3/extension-module", "python"]
#features = ["pyo3/extension-module","state_machine"]
manifest-path = "rust/nature_remo_api/Cargo.toml" # この行を追加

[tool.pytest.ini_options]
addopts = "-s"
testpaths = [
    "python/tests",
]
